--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -21,6 +24,8 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
@@ -53,7 +58,9 @@
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
