--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-tabs": "^1.0.4",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -93,8 +94,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.1"
+    "prettier": "^3.2.5"
   },
   "jest": {
     "roots": [
