--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.14.1",
