--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["clsx", "Elmedia", "shadcn", "tailwindcss"]
+  "cSpell.words": ["clsx", "Elmedia", "shadcn", "Spacebar", "tailwindcss"]
 }
