New script to generate shortcuts from karabiner file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,15 @@
 {
+  "ts-node": {
+    // these options are overrides used only by ts-node
+    // same as the --compilerOptions flag and the TS_NODE_COMPILER_OPTIONS environment variable
+    "compilerOptions": {
+      "target": "esnext",
+      "module": "commonjs",
+      "lib": ["esnext"]
+    }
+  },
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "baseUrl": "src",
     "paths": {
       "@/*": ["./*"]
@@ -20,5 +29,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"]
+  "include": ["src/**/*", "scripts"]
 }
