--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["clsx", "Elmedia", "shadcn", "Spacebar", "tailwindcss"]
+  "cSpell.words": [
+    "clsx",
+    "Elmedia",
+    "Karabiner",
+    "shadcn",
+    "Spacebar",
+    "tailwindcss"
+  ]
 }
