--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "shorty-cheats",
   "version": "0.1.0",
   "private": true,
+  "types": "module",
+  "scripts": {
+    "start": "node scripts/start.js",
+    "gen-spaces": "ts-node scripts/gen-spaces.ts --showConfig",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js"
+  },
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -42,6 +49,7 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -71,11 +79,6 @@
     "webpack-manifest-plugin": "^4.0.2",
     "workbox-webpack-plugin": "^6.4.1"
   },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
-  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -95,7 +98,10 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^3.2.5"
+    "@types/lodash": "^4.17.0",
+    "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0"
   },
   "jest": {
     "roots": [
