--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "types": "module",
   "scripts": {
     "start": "node scripts/start.js",
-    "gen-spaces": "ts-node scripts/gen-spaces.ts --showConfig",
+    "gen-spaces": "ts-node scripts/gen-spaces.ts",
+    "gen-spaces:watch": "nodemon --verbose",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
@@ -99,6 +100,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.0",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0"
